# management-de-projets-digitaux

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  authors.txt  docker-compose.yml  pyproject.toml  requirements.txt
docs/: data_dictionary.md  flowchart.png.drawio
src/: main.py
src/Function/: app_controller.py  data_viz.py
src/MaisonEstimateur/: app.py
src/MaisonEstimateur/analysis/: estimation.py  pricing.py  univariate_analysis.py
src/MaisonEstimateur/components/: layout.py  widgets.py
src/MaisonEstimateur/pages/: estimation_page.py  home_page.py  statistics_page.py
src/functions/: .ipynb_checkpoints.code-workspace  app_controller.py  data_viz.py
src/functions/__pycache__/: init
src/maison_estimateur/: __main__.py  app.py  style.css
src/maison_estimateur/analysis/: estimation.py  linear_regression.py  multivariate_analysis.py  pricing.py  report_figures.py  report_insights.py  report_pdf.py  univariate_analysis.py
src/maison_estimateur/components/: layout.py  widgets.py
src/maison_estimateur/data_processing/: load_data.py
src/maison_estimateur/pages/: aide_page.py  comparison_page.py  estimation_page.py  home_page.py  statistics_page.py
test/: test_data_viz_plots.py  test_get_average_price.py  test_load_data.py
tests/: conftest.py
tests/analysis/: test_estimation.py  test_linear_regression.py  test_multivariate_analysis.py  test_pricing.py  test_report_figures.py  test_report_insights.py  test_report_pdf.py  test_univariate_analysis.py
tests/data_processing/: test_load_data.py
tests/unit/: test_estimation.py  test_load_data.py  test_pricing.py  test_univariate_analysis.py
