[tool.poetry]
name = "maison-estimateur"
version = "0.1.0"
description = "Outil d'analyse du marché immobilier parisien"
authors = [
    "Oumar Abdramane ALLAWAN",
    "Dimitri DELPECH",
    "Minan Jean-Marc OUATTARA",
    "Simon MALHEY",
    "Dominique MUSITELLI"
]
readme = "README.md"
packages = [
  { include = "maison_estimateur", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"

# Main dependencies
streamlit = "^1.40.0"
pandas = "^2.2.0"
matplotlib = { version = "^3.8.0", markers = "platform_machine != 'wasm32'" }
plotly = "^5.18.0"
statsmodels = "^0.14.3"
scikit-learn = "^1.5.0"
numpy = ">=2.1.0"
seaborn = "^0.13.0"

# Dépendances liées à statsmodels
patsy = "^0.5.6"
scipy = ">=1.14.0"

# Autres dépendances nécessaires
python-dateutil = "^2.9.0"
pytz = "^2024.1"
tzdata = "^2024.1"
six = ">=1.5"
packaging = ">=21.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

