[project]
name = "maison-estimateur"
version = "0.1.0"
description = "Outil d'analyse du marché immobilier parisien"
readme = "README.md"
requires-python = ">=3.13,<4"
authors = [
  { name = "Oumar Abdramane ALLAWAN" },
  { name = "Dimitri DELPECH" },
  { name = "Minan Jean-Marc OUATTARA" },
  { name = "Simon MALHEY" },
  { name = "Dominique MUSITELLI" }
]

dependencies = [
  "streamlit>=1.40.0",
  "pandas>=2.2.0",
  "matplotlib>=3.8.0; platform_system != 'Windows'",
  "plotly>=5.18.0",
  "statsmodels>=0.14.3",
  "scikit-learn>=1.5.0",
  "numpy>=2.1.0",
  "seaborn>=0.13.0",
  "patsy>=0.5.6",
  "scipy>=1.14.0",
  "python-dateutil>=2.9.0",
  "pytz>=2024.1",
  "tzdata>=2024.1",
  "six>=1.5",
  "packaging>=21.3",
  "reportlab>=4.4.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "black>=24.0.0",
  "isort>=5.13.2",
  "flake8>=7.0.0"
]

[project.scripts]
maison-estimateur = "main:main"
