[project]
name = "maison-estimateur"
version = "0.1.0"
description = "Outil d'analyse du marché immobilier parisien"
readme = "README.md"
requires-python = ">=3.13,<4"
authors = [
  { name = "Oumar Abdramane ALLAWAN" },
  { name = "Dimitri DELPECH" },
  { name = "Minan Jean-Marc OUATTARA" },
  { name = "Simon MALHEY" },
  { name = "Dominique MUSITELLI" }
]

dependencies = [
  "streamlit>=1.40.0",
  "pandas>=2.2.0",
  "plotly>=5.18.0",
  "statsmodels>=0.14.3",
  "scikit-learn>=1.5.0",
  "numpy>=2.1.0",
  "patsy>=0.5.6",
  "scipy>=1.14.0",
  "python-dateutil>=2.9.0",
  "pytz>=2024.1",
  "tzdata>=2024.1",
  "six>=1.5",
  "packaging>=21.3",
  "reportlab>=4.4.6",
  "matplotlib>=3.9.0",
  "types-python-dateutil[dev] (>=2.9.0.20251115,<3.0.0.0)"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0"
]

[project.scripts]
maison_estimateur = "maison_estimateur.__main__:main"

[dependency-groups]
dev = [
    "pandas-stubs (>=2.3.3.251219,<3.0.0.0)",
    "types-reportlab (>=4.4.7.20251223,<5.0.0.0)"
]
